# SPDX-License-Identifier: Apache-2.0
# K9-AIF Framework — k9x_Shield
"""
BaseVulnerabilityCheck — ABB contract for the Chain of Vulnerability Tests.

GoF Chain of Responsibility pattern applied to security checks.
Each handler runs one check and passes the payload to the next handler.

SBBs implement check() — the chain wiring is handled by VulnerabilityChain.
"""

from __future__ import annotations

from abc import ABC, abstractmethod
from typing import Any, Dict, Optional

from .models.check_result import CheckResult


class BaseVulnerabilityCheck(ABC):
    """
    Abstract handler in the Chain of Vulnerability Tests.

    Implement check() to define the vulnerability test.
    The chain runner (VulnerabilityChain) controls traversal — do not call
    _next directly from check().
    """

    def __init__(self, config: Optional[Dict[str, Any]] = None) -> None:
        self.config:   Dict[str, Any] = config or {}
        self._next:    Optional["BaseVulnerabilityCheck"] = None

    # ── chain wiring ──────────────────────────────────────────────────────────

    def set_next(self, handler: "BaseVulnerabilityCheck") -> "BaseVulnerabilityCheck":
        """Wire the next handler. Returns handler to allow fluent chaining."""
        self._next = handler
        return handler

    # ── domain contract ───────────────────────────────────────────────────────

    @abstractmethod
    def check(self, payload: Dict[str, Any]) -> CheckResult:
        """
        Run this vulnerability check against the payload.

        Return:
          CheckResult.pass_check()  — no issue
          CheckResult.flag(...)     — issue detected, non-blocking
          CheckResult.block(...)    — issue detected, chain halts
        """
        raise NotImplementedError

    @property
    def check_name(self) -> str:
        return self.__class__.__name__
