# SPDX-License-Identifier: Apache-2.0
# K9-AIF Framework — k9x_Shield
"""
HardcodedCredentialCheck — OOB handler detecting secrets in payload values.

Scans string values for patterns that resemble API keys, tokens, passwords,
and other credentials that should never appear in a payload at runtime.

Config:
    extra_patterns: list[str]   — additional regex patterns to detect
    block_on_match: bool        — True (default) = BLOCK; False = FLAG only
"""

from __future__ import annotations

import re
from typing import Any, Dict, List, Tuple

from ..base_vulnerability_check import BaseVulnerabilityCheck
from ..models.check_result import CheckResult

# (pattern, label) — order matters: most specific first
_CREDENTIAL_PATTERNS: List[Tuple[re.Pattern, str]] = [
    (re.compile(r"\bsk-ant-[A-Za-z0-9\-_]{20,}", re.I),        "Anthropic API key"),
    (re.compile(r"\bsk-[A-Za-z0-9]{32,}", re.I),               "OpenAI API key"),
    (re.compile(r"\bAIza[0-9A-Za-z\-_]{35}", re.I),            "Google API key"),
    (re.compile(r"\bghp_[A-Za-z0-9]{36}", re.I),               "GitHub personal token"),
    (re.compile(r"\bxox[baprs]-[0-9A-Za-z\-]{10,}", re.I),     "Slack token"),
    (re.compile(r"AKIA[0-9A-Z]{16}"),                          "AWS access key"),
    (re.compile(r"-----BEGIN (RSA |EC |DSA |OPENSSH )?PRIVATE KEY-----"), "Private key"),
    (re.compile(r"(?i)(password|passwd|pwd)\s*[=:]\s*\S{6,}"), "Hardcoded password"),
    (re.compile(r"(?i)(secret|token|api[_-]?key)\s*[=:]\s*['\"]?\S{8,}"), "Hardcoded secret/token"),
]


class HardcodedCredentialCheck(BaseVulnerabilityCheck):
    """
    Detects hardcoded credentials, API keys, and secrets in payload string values.
    Returns BLOCK by default (configurable to FLAG).
    """

    def __init__(self, config: Dict[str, Any] | None = None) -> None:
        super().__init__(config)
        patterns = list(_CREDENTIAL_PATTERNS)
        for extra in self.config.get("extra_patterns", []):
            patterns.append((re.compile(extra, re.I), "custom pattern"))
        self._patterns = patterns
        self._block = self.config.get("block_on_match", True)

    def check(self, payload: Dict[str, Any]) -> CheckResult:
        hits = _scan_values(payload, self._patterns)
        if hits:
            label, excerpt = hits[0]
            msg = f"Credential pattern detected: {label}"
            if self._block:
                return CheckResult.block(
                    check_name=self.check_name,
                    message=msg,
                    severity="critical",
                    metadata={"credential_type": label, "excerpt": excerpt[:40] + "…"},
                )
            return CheckResult.flag(
                check_name=self.check_name,
                message=msg,
                severity="high",
                metadata={"credential_type": label},
            )
        return CheckResult.pass_check(self.check_name)


# ── helpers ───────────────────────────────────────────────────────────────────

def _scan_values(
    obj: Any,
    patterns: List[Tuple[re.Pattern, str]],
    _depth: int = 0,
) -> List[Tuple[str, str]]:
    if _depth > 8:
        return []
    hits: List[Tuple[str, str]] = []
    if isinstance(obj, str):
        for pattern, label in patterns:
            m = pattern.search(obj)
            if m:
                hits.append((label, m.group()))
    elif isinstance(obj, dict):
        for v in obj.values():
            hits.extend(_scan_values(v, patterns, _depth + 1))
    elif isinstance(obj, (list, tuple)):
        for item in obj:
            hits.extend(_scan_values(item, patterns, _depth + 1))
    return hits
