# SPDX-License-Identifier: Apache-2.0
# K9-AIF Framework — k9x_Shield
"""
InputSizeCheck — OOB handler guarding against oversized payloads.

Prevents token-stuffing attacks and runaway LLM costs by enforcing
character and key-count limits on the payload.

Config:
    max_chars:      int   — max total characters across all string values (default: 32_000)
    max_keys:       int   — max total keys in the payload dict (default: 100)
    block_on_match: bool  — True (default) = BLOCK; False = FLAG
"""

from __future__ import annotations

from typing import Any, Dict

from ..base_vulnerability_check import BaseVulnerabilityCheck
from ..models.check_result import CheckResult

_DEFAULT_MAX_CHARS = 32_000
_DEFAULT_MAX_KEYS  = 100


class InputSizeCheck(BaseVulnerabilityCheck):
    """
    Enforces maximum payload size to prevent token-stuffing and DoS via LLM.
    Returns BLOCK by default when limits are exceeded.
    """

    def __init__(self, config: Dict[str, Any] | None = None) -> None:
        super().__init__(config)
        self._max_chars = int(self.config.get("max_chars", _DEFAULT_MAX_CHARS))
        self._max_keys  = int(self.config.get("max_keys",  _DEFAULT_MAX_KEYS))
        self._block     = self.config.get("block_on_match", True)

    def check(self, payload: Dict[str, Any]) -> CheckResult:
        total_chars = _count_chars(payload)
        total_keys  = _count_keys(payload)

        if total_chars > self._max_chars:
            msg = (
                f"Payload exceeds max character limit: "
                f"{total_chars} chars (limit: {self._max_chars})"
            )
            return self._verdict(msg, "high", {"total_chars": total_chars, "limit": self._max_chars})

        if total_keys > self._max_keys:
            msg = (
                f"Payload exceeds max key count: "
                f"{total_keys} keys (limit: {self._max_keys})"
            )
            return self._verdict(msg, "medium", {"total_keys": total_keys, "limit": self._max_keys})

        return CheckResult.pass_check(self.check_name)

    def _verdict(self, msg: str, severity: str, metadata: dict) -> CheckResult:
        if self._block:
            return CheckResult.block(self.check_name, msg, severity=severity, metadata=metadata)
        return CheckResult.flag(self.check_name, msg, severity=severity, metadata=metadata)


def _count_chars(obj: Any, _depth: int = 0) -> int:
    if _depth > 8:
        return 0
    if isinstance(obj, str):
        return len(obj)
    if isinstance(obj, dict):
        return sum(_count_chars(v, _depth + 1) for v in obj.values())
    if isinstance(obj, (list, tuple)):
        return sum(_count_chars(i, _depth + 1) for i in obj)
    return len(str(obj))


def _count_keys(obj: Any, _depth: int = 0) -> int:
    if _depth > 8:
        return 0
    if isinstance(obj, dict):
        return len(obj) + sum(_count_keys(v, _depth + 1) for v in obj.values())
    if isinstance(obj, (list, tuple)):
        return sum(_count_keys(i, _depth + 1) for i in obj)
    return 0
