# SPDX-License-Identifier: Apache-2.0
# K9-AIF Framework — k9x_Shield
"""
PIIBoundaryCheck — OOB handler detecting PII in payload values.

Flags (non-blocking by default) when PII patterns are detected — email,
US SSN, credit card numbers, phone numbers. Returns FLAG so the pipeline
continues but the finding is recorded for audit and governance.

Config:
    block_on_match: bool   — False (default) = FLAG; True = BLOCK
    extra_patterns: list   — additional (pattern, label) regex strings
"""

from __future__ import annotations

import re
from typing import Any, Dict, List, Tuple

from ..base_vulnerability_check import BaseVulnerabilityCheck
from ..models.check_result import CheckResult

_PII_PATTERNS: List[Tuple[re.Pattern, str]] = [
    (re.compile(r"\b[A-Za-z0-9._%+\-]+@[A-Za-z0-9.\-]+\.[A-Za-z]{2,}\b"), "email address"),
    (re.compile(r"\b\d{3}-\d{2}-\d{4}\b"),                                 "US SSN"),
    (re.compile(r"\b(?:4[0-9]{12}(?:[0-9]{3})?|5[1-5][0-9]{14}|3[47][0-9]{13}|6(?:011|5[0-9]{2})[0-9]{12})\b"), "credit card number"),
    (re.compile(r"\b(\+1[-.\s]?)?\(?\d{3}\)?[-.\s]\d{3}[-.\s]\d{4}\b"),   "phone number"),
    (re.compile(r"\b\d{5}(?:-\d{4})?\b"),                                  "US ZIP code"),
]


class PIIBoundaryCheck(BaseVulnerabilityCheck):
    """
    Detects PII (email, SSN, credit card, phone) in payload values.
    Returns FLAG by default — non-blocking, recorded for audit.
    Set block_on_match: true in config to make it blocking.
    """

    def __init__(self, config: Dict[str, Any] | None = None) -> None:
        super().__init__(config)
        patterns = list(_PII_PATTERNS)
        for item in self.config.get("extra_patterns", []):
            patterns.append((re.compile(item[0], re.I), item[1]))
        self._patterns = patterns
        self._block = self.config.get("block_on_match", False)

    def check(self, payload: Dict[str, Any]) -> CheckResult:
        hits = _scan_pii(payload, self._patterns)
        if hits:
            label, _ = hits[0]
            msg = f"PII detected in payload: {label}"
            if self._block:
                return CheckResult.block(
                    check_name=self.check_name,
                    message=msg,
                    severity="high",
                    metadata={"pii_type": label, "count": len(hits)},
                )
            return CheckResult.flag(
                check_name=self.check_name,
                message=msg,
                severity="medium",
                metadata={"pii_type": label, "count": len(hits)},
            )
        return CheckResult.pass_check(self.check_name)


def _scan_pii(
    obj: Any,
    patterns: List[Tuple[re.Pattern, str]],
    _depth: int = 0,
) -> List[Tuple[str, str]]:
    if _depth > 8:
        return []
    hits: List[Tuple[str, str]] = []
    if isinstance(obj, str):
        for pattern, label in patterns:
            if pattern.search(obj):
                hits.append((label, obj))
    elif isinstance(obj, dict):
        for v in obj.values():
            hits.extend(_scan_pii(v, patterns, _depth + 1))
    elif isinstance(obj, (list, tuple)):
        for item in obj:
            hits.extend(_scan_pii(item, patterns, _depth + 1))
    return hits
