# SPDX-License-Identifier: Apache-2.0
# K9-AIF Framework — k9x_Shield
"""
PromptInjectionCheck — OOB handler detecting prompt injection patterns.

Scans all string values in the payload for known injection phrases.
Config:
    extra_patterns: list[str]   — additional phrases to detect
    severity:       str         — override severity (default: critical)
"""

from __future__ import annotations

import re
from typing import Any, Dict, List

from ..base_vulnerability_check import BaseVulnerabilityCheck
from ..models.check_result import CheckResult

_DEFAULT_PATTERNS: List[str] = [
    r"ignore\s+(previous|all|prior)\s+instructions?",
    r"bypass\s+(policy|guardrail|security|safety|governance)",
    r"disable\s+(guardrail|safety|filter|policy)",
    r"you\s+are\s+now\s+(DAN|jailbreak|unrestricted)",
    r"act\s+as\s+(if\s+you\s+have\s+no\s+)?(restriction|limit|rule)",
    r"exfiltrate|dump\s+(credential|secret|key|token|password)",
    r"leak\s+(secret|credential|key|token|api)",
    r"forget\s+(your\s+)?(instruction|rule|training|guideline)",
    r"reveal\s+(your\s+)?(system\s+prompt|instruction|context)",
    r"jailbreak",
]


class PromptInjectionCheck(BaseVulnerabilityCheck):
    """
    Detects prompt injection and instruction-override attempts in payload strings.
    Returns BLOCK on any match — injection is always high-severity.
    """

    def __init__(self, config: Dict[str, Any] | None = None) -> None:
        super().__init__(config)
        patterns = list(_DEFAULT_PATTERNS)
        for extra in self.config.get("extra_patterns", []):
            patterns.append(re.escape(extra))
        self._compiled = [re.compile(p, re.IGNORECASE) for p in patterns]
        self._severity = self.config.get("severity", "critical")

    def check(self, payload: Dict[str, Any]) -> CheckResult:
        text = _flatten_to_text(payload)
        for pattern in self._compiled:
            match = pattern.search(text)
            if match:
                return CheckResult.block(
                    check_name=self.check_name,
                    message=f"Prompt injection pattern detected: '{match.group()}'",
                    severity=self._severity,
                    metadata={"matched_pattern": pattern.pattern, "excerpt": match.group()},
                )
        return CheckResult.pass_check(self.check_name)


def _flatten_to_text(obj: Any, _depth: int = 0) -> str:
    if _depth > 8:
        return ""
    if isinstance(obj, str):
        return obj
    if isinstance(obj, dict):
        return " ".join(_flatten_to_text(v, _depth + 1) for v in obj.values())
    if isinstance(obj, (list, tuple)):
        return " ".join(_flatten_to_text(i, _depth + 1) for i in obj)
    return str(obj)
