# SPDX-License-Identifier: Apache-2.0
# K9-AIF Framework — k9x_Shield
"""
State contracts for vulnerability check results.

CheckStatus  — PASS / FLAG / BLOCK
CheckResult  — result of one handler in the chain
ChainResult  — aggregate result of the full VulnerabilityChain run
"""

from __future__ import annotations

from dataclasses import dataclass, field
from enum import Enum
from typing import Any, Dict, List, Optional


class CheckStatus(Enum):
    PASS  = "pass"   # no issue detected — chain continues
    FLAG  = "flag"   # issue noted, non-blocking — recorded for audit
    BLOCK = "block"  # hard stop — payload rejected, chain halts


@dataclass
class CheckResult:
    """Result produced by one BaseVulnerabilityCheck handler."""

    check_name: str
    status:     CheckStatus
    message:    str
    severity:   str = "info"       # info | low | medium | high | critical
    metadata:   Dict[str, Any] = field(default_factory=dict)

    @property
    def passed(self) -> bool:
        return self.status == CheckStatus.PASS

    @property
    def flagged(self) -> bool:
        return self.status == CheckStatus.FLAG

    @property
    def blocked(self) -> bool:
        return self.status == CheckStatus.BLOCK

    # ── convenience constructors ──────────────────────────────────────────────

    @classmethod
    def pass_check(cls, check_name: str, message: str = "Check passed") -> "CheckResult":
        return cls(check_name=check_name, status=CheckStatus.PASS, message=message)

    @classmethod
    def flag(
        cls,
        check_name: str,
        message: str,
        severity: str = "medium",
        metadata: Optional[Dict[str, Any]] = None,
    ) -> "CheckResult":
        return cls(
            check_name=check_name,
            status=CheckStatus.FLAG,
            message=message,
            severity=severity,
            metadata=metadata or {},
        )

    @classmethod
    def block(
        cls,
        check_name: str,
        message: str,
        severity: str = "critical",
        metadata: Optional[Dict[str, Any]] = None,
    ) -> "CheckResult":
        return cls(
            check_name=check_name,
            status=CheckStatus.BLOCK,
            message=message,
            severity=severity,
            metadata=metadata or {},
        )


@dataclass
class ChainResult:
    """Aggregate result of a full VulnerabilityChain run."""

    results:    List[CheckResult] = field(default_factory=list)
    blocked_by: Optional[str] = None   # name of the check that triggered BLOCK

    @property
    def passed(self) -> bool:
        return self.blocked_by is None

    @property
    def blocked(self) -> bool:
        return self.blocked_by is not None

    @property
    def flags(self) -> List[CheckResult]:
        return [r for r in self.results if r.flagged]

    @property
    def blocks(self) -> List[CheckResult]:
        return [r for r in self.results if r.blocked]

    def summary(self) -> Dict[str, Any]:
        return {
            "passed":     self.passed,
            "blocked":    self.blocked,
            "blocked_by": self.blocked_by,
            "total":      len(self.results),
            "flags":      len(self.flags),
            "blocks":     len(self.blocks),
        }
