# SPDX-License-Identifier: Apache-2.0
# K9-AIF Framework — k9x_Shield
"""
VulnerabilityChain — assembles and runs the Chain of Vulnerability Tests.

Usage:
    chain = VulnerabilityChain()
    chain.add(PromptInjectionCheck())
    chain.add(PIIBoundaryCheck())
    chain.add(InputSizeCheck())

    result = chain.run(payload)
    if result.blocked:
        raise SecurityError(result.blocked_by)
"""

from __future__ import annotations

import logging
from typing import Any, Dict, List

from .base_vulnerability_check import BaseVulnerabilityCheck
from .models.check_result import ChainResult, CheckStatus

log = logging.getLogger("VulnerabilityChain")


class VulnerabilityChain:
    """
    Assembles and executes the Chain of Vulnerability Tests.

    Default behaviour:
      - Runs ALL checks even if a FLAG is encountered (non-blocking).
      - Stops immediately on the first BLOCK — remaining checks are skipped.
      - strict=True: treats FLAG as BLOCK (stop on first issue of any kind).
    """

    def __init__(self, strict: bool = False) -> None:
        self._checks: List[BaseVulnerabilityCheck] = []
        self._strict = strict

    # ── builder ───────────────────────────────────────────────────────────────

    def add(self, check: BaseVulnerabilityCheck) -> "VulnerabilityChain":
        """Add a handler to the end of the chain. Returns self for fluent use."""
        self._checks.append(check)
        return self

    # ── execution ─────────────────────────────────────────────────────────────

    def run(self, payload: Dict[str, Any]) -> ChainResult:
        """
        Execute every handler in order against the payload.

        Returns ChainResult with all individual results and an overall verdict.
        """
        chain_result = ChainResult()

        for check in self._checks:
            try:
                result = check.check(payload)
            except Exception as exc:
                log.error("[k9x_Shield] %s raised unexpectedly: %s", check.check_name, exc)
                from .models.check_result import CheckResult
                result = CheckResult.flag(
                    check_name=check.check_name,
                    message=f"Check raised an exception: {exc}",
                    severity="high",
                    metadata={"exception": str(exc)},
                )

            chain_result.results.append(result)

            if result.status == CheckStatus.BLOCK:
                chain_result.blocked_by = check.check_name
                log.warning(
                    "[k9x_Shield] BLOCKED by %s: %s", check.check_name, result.message
                )
                break

            if self._strict and result.status == CheckStatus.FLAG:
                chain_result.blocked_by = check.check_name
                log.warning(
                    "[k9x_Shield] STRICT FLAG→BLOCK by %s: %s",
                    check.check_name,
                    result.message,
                )
                break

            if result.status == CheckStatus.FLAG:
                log.info(
                    "[k9x_Shield] FLAG from %s (severity=%s): %s",
                    check.check_name,
                    result.severity,
                    result.message,
                )

        return chain_result

    def __len__(self) -> int:
        return len(self._checks)
